[MekGravity] fix: fill stellar energy buffer before throttling